@@ -1,15 +1,20 @@
 import org.openqa.selenium.By;
+import org.openqa.selenium.Dimension;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
+import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.Select;
+import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class FilterTest {
 
@@ -45,7 +50,7 @@ public class FilterTest {
                 pricesArray.add(Double.valueOf(regularPricesArray.get(i)));
             }
         }
-        Assert.assertEquals(pricesArray,pricesArray.stream().sorted().toList());
+        Assert.assertEquals(pricesArray,pricesArray.stream().sorted().collect(Collectors.toList()));
 
     }
 
